fix(tab-bar): better icon color in dark mode
When icon color is not specified by the tab, it defaults to
our dark-mode friendly variables.

--- a/src/components/tab-bar/tab-bar.scss
+++ b/src/components/tab-bar/tab-bar.scss
@@ -97,6 +97,9 @@ $tab-separator-background-color: rgb(var(--contrast-600));
     }
 
     .mdc-tab__icon {
+        color: rgb(
+            var(--contrast-800)
+        ); // inactive tab's icon color, unless defined by tab item itself
         margin-left: -0.25rem;
     }
 
@@ -137,6 +140,12 @@ $tab-separator-background-color: rgb(var(--contrast-600));
             background-color: transparent;
             transition: background-color 1s ease;
         }
+    }
+
+    .mdc-tab__icon {
+        color: var(
+            --mdc-theme-primary
+        ); // active tab's icon color, unless defined by tab item itself
     }
 }
 
